k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-avidboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - dev.sajalshres.com
      secretName: dev.sajalshres.com-tls
  rules:
    - host: dev.sajalshres.com
      http:
        paths:
          - path: /avidboard
            pathType: Prefix
            backend:
              service:
                name: avidboard-web
                port:
                  number: 3000
          - path: /avidboard/api/accounts/
            pathType: Prefix
            backend:
              service:
                name: avidboard-accounts
                port:
                  number: 5000
          - path: /avidboard/api/kanban/
            pathType: Prefix
            backend:
              service:
                name: avidboard-kanban
                port:
                  number: 8000
